# NexusAI

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  chatbot.py  routes.py  web_search.py
app/static/css/: style.css
app/static/js/: main.js
app/templates/: index.html
